force-app/main/default/objects/Extole_Event_Cfg__c/Extole_Event_Cfg__c.object-meta.xml
<CustomObject>
    <label>Extole Event Config</label>
    <nameField>
        <label>Config ID</label>
        <type>AutoNumber</type>
        <displayFormat>EC-{00000}</displayFormat>
    </nameField>
    <pluralLabel>Extole Event Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>