force-app/main/default/objects/Extole_Event_Cfg__c/fields/Deploy_Error__c.field-meta.xml
<CustomField>
    <fullName>Deploy_Error__c</fullName>
    <label>Deploy Error</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>