force-app/main/default/objects/Extole_Event_Cfg__c/fields/Deployed_By_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Deployed_By_User_Id__c</fullName>
    <label>Deployed By User ID</label>
    <type>Text</type>
    <length>18</length>
</CustomField>