force-app/main/default/objects/Extole_Event_Cfg__c/fields/Field_Mappings_JSON__c.field-meta.xml
<CustomField>
    <fullName>Field_Mappings_JSON__c</fullName>
    <label>Field Mappings JSON</label>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>