force-app/main/default/objects/Extole_Event_Cfg__c/fields/Last_HTTP_Status__c.field-meta.xml
<CustomField>
    <fullName>Last_HTTP_Status__c</fullName>
    <label>Last HTTP Status</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>