force-app/main/default/objects/Extole_Event_Cfg__c/fields/Last_Response_Summary__c.field-meta.xml
<CustomField>
    <fullName>Last_Response_Summary__c</fullName>
    <label>Last Response Summary</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>