force-app/main/default/objects/Extole_Event_Cfg__c/fields/Last_Tested_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Last_Tested_Record_Id__c</fullName>
    <label>Last Tested Record ID</label>
    <type>Text</type>
    <length>18</length>
</CustomField>