force-app/main/default/objects/Extole_Event_Cfg__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACTIVE</fullName>
            </value>
            <value>
                <fullName>INACTIVE</fullName>
            </value>
            <value>
                <fullName>DRAFT</fullName>
                <default>true</default>
                <label>DRAFT</label>
            </value>
            <value>
                <fullName>DEPLOY_FAILED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>