force-app/main/default/objects/Extole_Event_Cfg__c/fields/Trigger_Object__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Object__c</fullName>
    <label>Trigger Object</label>
    <type>Text</type>
    <length>255</length>
</CustomField>