force-app/main/default/objects/Extole_Event_Cfg__c/fields/Trigger_Type__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Type__c</fullName>
    <label>Trigger Type</label>
    <type>Text</type>
    <length>255</length>
</CustomField>